# apply-potato

./: .env.example  .gitignore  README.md  check_gmail.py  install_service.py  pyproject.toml  requirements.txt  scrape_jobs.py  setup.py  setup_wizard.py
prompts/: email_classification.txt  job_extraction.txt
scripts/: README.md  test_ai_extractor.py  test_e2e.py
src/: __init__.py  ai_extractor.py  config.py  deduplication.py  email_classifier.py  email_filters.py  filters.py  github_parser.py  gmail.py  logging_config.py  notifications.py  scoring.py  scraper.py  sheets.py
tests/: README.md  conftest.py  test_ai_email.py  test_ai_extraction.py  test_deduplication.py  test_filters.py  test_integration.py  test_notifications.py  test_scoring.py
tests/fixtures/: test_config.json
tests/fixtures/emails/: confirmation_google.json  interview_google.json  oa_microsoft.json  offer_google.json  rejection_microsoft.json  rejection_unknown.json  technical_google.json
tests/fixtures/github_markdown/: test_jobs.md
tests/fixtures/job_pages/: amazon_senior_only.txt  google_swe_intern.txt  meta_fulltime.txt  microsoft_intern.txt  startup_no_visa.txt  western_union_enrollment.txt
tests/mocks/: mock_sheets.py
